Ireer 113 counter based initiatives (#11)
* trx count based initiative completed

* RewardLimits condition rule completed

* RewardLimitsconsequences rule completed

Co-authored-by: anttorre <antonio.torre@everis.com>